# chainsaw

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  _config.yml  index.md
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
example/: bounching_ball.cpp  dcmotor.cpp  dcmotor_v2.cpp  lotka.cpp  pendulum.cpp  spring_mass_damper.cpp  tandem_dc_motors.cpp
examples/: accellerometer.cpp  bounching_ball.cpp  compare_adaptive.cpp  compare_fixed.cpp  comparison.cpp  dcmotor.cpp  dcmotor_v2.cpp  defines.hpp  lotka.cpp  multi_mode.cpp  pendulum.cpp  robot_arm.cpp  spring_mass_damper.cpp  tandem_dc_motors.cpp
include/: defines.hpp  model.hpp  type_traits.hpp
include/chainsaw/: solver.hpp
include/chainsaw/detail/: it_algebra.hpp  less_with_sign.hpp  observer.hpp  rotating_buffer.hpp  type_traits.hpp
include/chainsaw/stepper/: stepper_adaptive.hpp  stepper_euler.hpp  stepper_improved_euler.hpp  stepper_midpoint.hpp  stepper_rk4.hpp  stepper_simpsons.hpp  stepper_trapezoidal.hpp
include/numint/: solver.hpp
include/numint/detail/: it_algebra.hpp  less_with_sign.hpp  observer.hpp  rotating_buffer.hpp  type_traits.hpp
include/numint/stepper/: stepper_adaptive.hpp  stepper_euler.hpp  stepper_improved_euler.hpp  stepper_midpoint.hpp  stepper_rk4.hpp  stepper_simpsons.hpp  stepper_trapezoidal.hpp
include/solver/: it_algebra.hpp  less_with_sign.hpp  observer.hpp  rotating_buffer.hpp  solver.hpp  stepper_adaptive.hpp  stepper_adaptive_euler.hpp  stepper_adaptive_rk4.hpp  stepper_euler.hpp  stepper_rk4.hpp
include/solver/detail/: it_algebra.hpp  less_with_sign.hpp  observer.hpp  rotating_buffer.hpp  type_traits.hpp
include/solver/stepper/: stepper_adaptive.hpp  stepper_adaptive_euler.hpp  stepper_adaptive_rk4.hpp  stepper_euler.hpp  stepper_rk4.hpp
other/: dcmotor_l_temp.hpp  dcmotor_nl_frict.hpp
src/: main.cpp
